--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <met name="keywords" content="web design, affordable web design", "professional web design">
     <meta name="author" content="Jermaine Young">
       <title> Bell Web Design | Welcome</title>
-     <link rel="stylesheet" type="text/css" href="styles.css">
+     <link rel="stylesheet" type="text/css" href="../css/styles.css">
   </head>
   <body>
     <header>
