--- a/services.html
+++ b/services.html
@@ -7,8 +7,208 @@
     <met name="keywords" content="web design, affordable web design", "professional web design">
     <meta name="author" content="Jermaine Young">
       <title> Bell Web Design | Services</title>
-      <link rel="stylesheet" type="text/css" href="styles.css">
+    <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
   </head>
+    <style>
+    body{
+  font: 15px/1.5 Arial, Helvetica, sans-serif;
+  padding: 0;
+  margin: 0;
+  background-color: white;
+}
+
+/*Global*/
+.container{
+  width:80%;
+  margin: auto;
+  overflow: hidden;
+}
+
+ul{
+  margin:0;
+  padding:0;
+}
+
+.button_1{
+  height: 38px;
+  background: #e8491d;
+  border:0;
+  padding-left: 20px;
+  padding-right: 20px;
+  color:#ffffff;
+}
+
+.dark{
+  padding: 15px;
+  background: #000;
+  color: #ffffff;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+/*Header*/
+header{
+  background:#1E90FF;
+  color:#FFD700;
+  padding-top:30px;
+  min-height: :70px;
+  border-bottom: #7FFFD4 3px solid;
+}
+
+header a{
+  color:#FFD700;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
+header li{
+  float:left;
+  display:inline;
+  padding: 0 20px 0 20px;
+}
+
+header #branding{
+  float:left;
+}
+
+header #branding h1{
+  margin: 0;
+}
+
+header nav{
+  float: right;
+  margin-top: 10px;
+}
+
+header .highlight, header .current a{
+  color: #7FFFD4;
+  font-weight:bold;
+}
+
+header a:hover{
+  color: #cccccc;
+  font-weight: bold;
+}
+
+/* bell */
+#showcase{
+  min-height: 500px;
+  background:url('img/showcase.jpg') no-repeat 0 -500px;
+  text-align: center;
+  color: #FFD700;
+}
+
+#showcase h1{
+  margin-top: 100px;
+  font-size: 55px;
+  margin-bottom: 10px;
+}
+
+#showcase{
+  font-size:20px;
+}
+
+#newsletter{
+  padding:15px;
+  color: #ffffff;
+  background: #D3D3D3;
+}
+
+#newsletter h1{
+  float:left;
+}
+
+#newsletter form{
+  float: right;
+  margin-top: 15px;
+}
+
+#newsletter input[type="email"]{
+  padding: 4px;
+  height: 25px;
+  width:250px;
+}
+
+
+/* Boxes */
+#boxes .box{
+  float:left;
+  text-align: center;
+  width:30%;
+  padding:10px;
+}
+
+#boxes .box img{
+  width:90px;
+}
+
+/* Sidebar*/
+aside#sidebar{
+    float: right;
+    width: 30%;
+    margin-top: 10px;
+}
+
+aside#sidebar .quote input, aside#sidebar .quote textarea{
+  width: 90%;
+  padding: 5px;
+}
+/* Main-col */
+article#main-col{
+  float: left;
+  width: 65%;
+}
+
+/* Services */
+ul#services li{
+  list-style: none;
+  padding: 20px;
+  border: #cccccc solid 1px;
+  margin-bottom: 5px;
+  background: #e6e6e6;
+}
+footer{
+  padding:20px;
+  margin-top: 20px;
+  color:#ffffff;
+  background-color:#1E90FF;
+  text-align: center;
+}
+
+/* Media Queries */
+@media(max-width: 768px){
+  header #branding,
+  header nav,
+  header nav li
+  #newsletter h1,
+  #newsletter form,
+  #boxes .box,
+  article#main-col,
+  aside#sidebar{
+    float: none;
+    text-align: center;
+    width: 100%;
+  }
+
+  header{
+    padding-bottom: 20px;
+  }
+
+  #elmcity h1{
+    margin-top:40px;
+  }
+
+  #newsletter button, .quote button{
+    display: block;
+    width: 100%;
+  }
+
+  #newsletter form input[type= "email"]{
+    width: 100%;
+    margin-bottom: 5px;
+  }
+}
+    </style>
   <body>
     <header>
       <div class="container">
