--- a/about.html
+++ b/about.html
@@ -256,7 +256,7 @@ footer{
     <div>
       <div class= "container">
         <div class="row">
-          <div class="col-sm-6 text-center">
+          <div class="col-sm-6 text-align:center">
             <h2>TESTIMONIALS</h2>
             <div class="subheading">
         </div>
